--- a/sketch/style.css
+++ b/sketch/style.css
@@ -42,9 +42,8 @@ body{
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 5rem;
     font-weight: 500;
-    margin: 2%;
     padding: 0;
     opacity: 0;
     transition: all 1s ease-in-out;
@@ -59,18 +58,18 @@ ul{
     grid-gap: 1rem;
     align-items: center;
     justify-content: center;
-    margin: 0 20%;
-    padding: 1rem;
+    margin: 2% 2% 0 2%;
+    padding: 0rem;
     opacity: 1;
-    max-height: 60vh;
-    width: 60%;
+    max-height: 25vh;
+    width: 96%;
     overflow-y: scroll;
     /* overflow-x: hidden; */
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
-    background-color: #00000022;
-    backdrop-filter: blur(20px) !important;
+    /* background-color: #00000022; */
+    /* backdrop-filter: blur(20px) !important; */
     li{
         margin: 0;
         padding: 0;
@@ -143,7 +142,41 @@ us::-webkit-scrollbar {
   }
 
 #bookmarks{
-    scale: 0.2;
     opacity: 0;
-    transition: all 1s ease-in-out;
+    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+    backdrop-filter: blur(20px) !important;
+    background-color: #00000022;
+    width: 70%;
+    border-radius: 30px 30px 0 0;
+    position: absolute;
+    bottom: -50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease-in-out;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    /* top: 70vh; */
+    left: 0;
+    z-index: 100;
+    color: aliceblue;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    /* scale: 0.2; */
+    transition: all 0.5s ease-in-out;
+    
+}
+
+.container:hover{
+        /* top: 10vh; */
+    }
