--- a/sketch/style.css
+++ b/sketch/style.css
@@ -19,6 +19,7 @@ body{
     transition: all 0.5s ease-in-out;
 }
 
+
 #bg{
     position: absolute;
     top: 0;
@@ -180,3 +181,120 @@ us::-webkit-scrollbar {
 .container:hover{
         /* top: 10vh; */
     }
+
+
+.edit{
+    scale: 0.6 !important;
+    border-radius: 40px !important;
+    left: 0 !important;
+    margin-left: 0 !important;
+    padding-left: 0 !important;
+}
+
+.canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
+    transition: all 1s ease-out;
+    z-index: -100;
+    background-color: #222222;
+    color: aliceblue;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    /* transition: all 3s ease-in-out; */
+    h3{
+        font-size: 2rem;
+        font-weight: 500;
+        margin: 3%;
+        opacity: 1;
+        text-align: center;
+    }
+}
+
+form{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s ease-in-out;
+    position: absolute;
+    bottom: 2%;
+    width: 50%;
+    margin: 0 25%;
+    z-index: 100;
+    color: aliceblue;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    overflow: hidden;
+    /* scale: 0.2; */
+    transition: all 0.5s ease-in-out;
+    fieldset{
+        border-radius: 20px;
+        width: 70%;
+        height: 70%;
+    }
+    input{
+        margin: 5%;
+        padding: 5%;
+        border-radius: 20px;
+        border: none;
+        background-color: #00000022;
+        color: aliceblue;
+        font-size: 1rem;
+        font-weight: 400;
+        text-align: center;
+        width: 90%;
+        transition: all 0.25s ease-in-out;
+        &:focus{
+            background-color: #00000044;
+            color: aliceblue;
+            scale: 1.1;
+        }
+    }
+    select{
+        margin: 5%;
+        padding: 5%;
+        border-radius: 20px;
+        border: none;
+        background-color: #00000022;
+        color: aliceblue;
+        font-size: 1rem;
+        font-weight: 400;
+        text-align: center;
+        width: 90%;
+        transition: all 0.25s ease-in-out;
+        &:focus{
+            background-color: #00000044;
+            color: aliceblue;
+            scale: 1.1;
+        }
+    }
+    button{
+        margin: 1%;
+        padding: 1%;
+        border-radius: 20px;
+        border: none;
+        background-color: #00000022;
+        color: aliceblue;
+        font-size: 1rem;
+        font-weight: 400;
+        text-align: center;
+        width: 50%;
+        transition: all 0.25s ease-in-out;
+        &:focus{
+            background-color: #00000044;
+            color: aliceblue;
+            scale: 1.1;
+        }
+    }
+}
