--- a/sketch/style.css
+++ b/sketch/style.css
@@ -47,6 +47,7 @@ h1{
     font-weight: 500;
     padding: 0;
     opacity: 0;
+    transform: translate(0, -100%);
     transition: all 1s ease-in-out;
     text-align: center;
 }
@@ -117,12 +118,12 @@ ul{
         a:hover{
             color: #ffffff;
             background-color: rgb(255, 255, 255);
-            scale: 1.1;
+            scale: 1.02;
             p{
                 scale: 1;
             }
             img{
-                scale: 1.5;
+                scale: 1.3;
             }
         }
         /* opacity: 0; */
@@ -221,26 +222,27 @@ us::-webkit-scrollbar {
 
 form{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     align-items: center;
     justify-content: center;
     transition: all 1s ease-in-out;
     position: absolute;
     bottom: 2%;
-    width: 70%;
-    margin: 0 15%;
+    width: 96%;
+    margin: 0 2%;
     z-index: 100;
     color: aliceblue;
     align-items: center;
     justify-content: center;
     padding: 0;
     overflow: hidden;
+    height: 15%;
     /* scale: 0.2; */
     transition: all 0.5s ease-in-out;
     fieldset{
         border-radius: 20px;
         width: 100%;
-        height: 70%;
+        height: 100%;
         border: none;
         display: flex;
         flex-direction: row;
